syntax = "proto3";

option java_package = "com.example.domainservice.grpc";

service OrderService {
  rpc GetOrder (OrderRequest) returns (OrderResponse);
  rpc GetAllOrders (Empty) returns (OrderList);
}

message OrderRequest {
  string orderId = 1;
  optional string customerName = 2;
  optional double amount = 3;
  optional string date = 4;
}

message OrderResponse {
  string orderId = 1;
  string customerName = 2;
  double amount = 3;
  string date = 4;
}

message Empty {}

message OrderList {
  repeated OrderResponse orders = 1;
}
